--- a/style.css
+++ b/style.css
@@ -22,3 +22,18 @@
     color: #fff;
     margin-top: 3px;
 }
+
+/* Footer */
+.footer {
+    width: 100%;
+    height: 60px;
+    background-color: aqua;
+}
+
+.footer h1 {
+    color: blanchedalmond;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
